crates/ink/tests/ui/contract/fail/constructor-self-receiver-03.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:34
  |
8 |         pub fn constructor(this: &Self) -> Self {
  |                                  ^ explicit lifetime name needed here

error[E0411]: cannot find type `Self` in this scope
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:35
  |
4 |     pub struct Contract {}
  |     --- `Self` not allowed in a constant item
...
8 |         pub fn constructor(this: &Self) -> Self {
  |                                   ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0411]: cannot find type `Self` in this scope
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:35
  |
1 | #[ink::contract]
  | ---------------- `Self` not allowed in a function
...
8 |         pub fn constructor(this: &Self) -> Self {
  |                                   ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0277]: the trait bound `&Contract: WrapperTypeDecode` is not satisfied
 --> tests/ui/contract/fail/constructor-self-receiver-03.rs:8:9
  |
8 |         pub fn constructor(this: &Self) -> Self {
  |         ^^^ the trait `WrapperTypeDecode` is not implemented for `&Contract`
  |
  = help: the following other types implement trait `WrapperTypeDecode`:
            Box<T>
            sp_core::Bytes
            Rc<T>
            Arc<T>
  = note: required for `&Contract` to implement `ink::parity_scale_codec::Decode`
